<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateGameActivity"
    android:background="@color/bg_gray">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        app:cardElevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp">
                <LinearLayout
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:text="@string/title_player_nums"
                        android:textSize="18sp" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:text="@string/notes_player_nums"
                        android:textSize="12sp" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/CG_text_numsPlayer"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:textAlignment="center"
                    android:textSize="26sp" />
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/CG_seekBar_numsPlayer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        app:cardElevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:text="@string/title_judge_exist"
                    android:textSize="18sp" />
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/judge_select_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/notes_judge_exist"
                android:textAlignment="center"
                android:textSize="12sp"
                android:layout_marginBottom="4dp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        app:cardElevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/title_topic_select"
                android:textSize="18sp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/CG_btn_startGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_btn_start_game"
                android:layout_marginTop="128dp"
                android:onClick="startGame"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
