<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:theme="@style/AppTheme"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="64dp"
            android:layout_marginBottom="32dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardCornerRadius="60dp"
            android:elevation="12dp"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@mipmap/avatar" />
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:layout_marginBottom="64dp"
            android:text="测试用占位符" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Main_Btn_create"
            android:layout_gravity="center_horizontal"
            android:layout_width="256dp"
            android:layout_height="64dp"
            android:onClick="createRoom"
            android:text="@string/btn_create_room"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Main_Btn_join"
            android:layout_gravity="center_horizontal"
            android:layout_width="256dp"
            android:layout_height="64dp"
            android:onClick="joinRoom"
            android:text="@string/btn_join_room"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:textSize="12sp"
            android:layout_marginBottom="16dp"
            android:text="@string/copyright" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
